--- a/src/main/resources/com/planner/pages/CalendarUpdate.tml
+++ b/src/main/resources/com/planner/pages/CalendarUpdate.tml
@@ -5,13 +5,25 @@
 <h1>Update</h1>
     
     <div class="eg">
-        <t:if test="calendar">
-            <t:beaneditform t:id="calendarForm" object="calendar" submitLabel="Save"/>
+        <t:if test="userCalendar">
+<!--             <t:beaneditform t:id="calendarForm1" object="calendar" t:include="description,workStart,workEnd" t:reorder="workStart,workEnd,description" submitLabel="Save"/> -->
+<!--             <br/> -->
+            <form t:type="form" t:id="calendarForm" class="well">
+            	<t:label for="updDescription"/>
+				<input t:type="TextField" t:id="updDescription" value="userCalendar.description" t:validate="required, maxlength=100" size="10"/>
+				<br/>
+				<t:label for="updWorkStart"/>
+				<input t:type="TextField" t:id="updWorkStart" value="userCalendar.workStart" t:validate="required, maxlength=5" size="10"/>
+				<br/>
+				<t:label for="updWorkEnd"/>
+				<input t:type="TextField" t:id="updWorkEnd" value="userCalendar.workEnd" t:validate="required, maxlength=5" size="10"/>
+				<br/>
+				<input t:type="submit" t:value="Zapisz"/>
+            </form>
         </t:if>
-        <t:if negate="true" test="calendar">
+        <t:if negate="true" test="userCalendar">
             Person ${calendarId} does not exist.<br/><br/>
         </t:if>
-    
         <a t:type="pageLink" t:page="plan" href="#">Cancel</a>
     </div>
 
