--- a/src/main/resources/com/planner/pages/Plan.tml
+++ b/src/main/resources/com/planner/pages/Plan.tml
@@ -26,6 +26,7 @@
 				<br/>
 			<input class="btn btn-lg btn-primary btn-block" t:id="down" t:type="Submit" value="Następny tydzień"/>
 		</t:Form>
+		${userWorkHoursWeekly}
 	</t:If>
 
 </html>
