--- a/src/main/resources/com/planner/pages/CalendarUpdate.tml
+++ b/src/main/resources/com/planner/pages/CalendarUpdate.tml
@@ -6,27 +6,35 @@
     
     <div class="eg">
         <t:if test="userCalendar">
-<!--             <t:beaneditform t:id="calendarForm1" object="calendar" t:include="description,workStart,workEnd" t:reorder="workStart,workEnd,description" submitLabel="Save"/> -->
-<!--             <br/> -->
-            <form t:type="form" t:id="calendarForm" class="well">
-            	<t:label for="updDescription"/>
-				<input t:type="TextField" t:id="updDescription" value="userCalendar.description" t:validate="maxlength=100" size="10"/>
-				<br/>
-				<t:label for="updWorkStart"/>
-				<t:select t:id="updWorkStart" value="userCalendar.workStart" model="hours"/>
-				<br/>
-<!-- 				<input t:type="TextField" t:id="updWorkStart" value="userCalendar.workStart" t:validate="maxlength=5" size="10"/> -->
+            <t:beaneditform t:id="calendarForm" object="userCalendar" t:include="description,workStart,workEnd" t:reorder="workStart,workEnd,description" submitLabel="Save">
+            	<p:workStart>
+	            	<br/>
+					<t:label for="crtWorkStart"/>
+            		<t:select t:id="updWorkStart" value="userCalendar.workStart" model="hours"/>
+            	</p:workStart>
+            	<p:workEnd>
+            		<br/>
+            		<t:label for="crtWorkEnd"/>
+            		<t:select t:id="updWorkEnd" value="userCalendar.workEnd" model="hours"/>
+            		<br/>
+            	</p:workEnd>
+            </t:beaneditform>
+            <br/>
+<!--             <t:form type="form" t:id="calendarForm" class="well"> -->
+<!--             	<t:label for="updDescription"/> -->
+<!-- 				<input t:type="TextField" t:id="updDescription" value="userCalendar.description" t:validate="maxlength=100" size="10"/> -->
 <!-- 				<br/> -->
-				<t:label for="updWorkEnd"/>
-				<t:select t:id="updWorkEnd" value="userCalendar.workEnd" model="hours"/>
-				<br/>
-<!-- 				<input t:type="TextField" t:id="updWorkEnd" value="userCalendar.workEnd" t:validate="maxlength=5" size="10"/> -->
+<!-- 				<t:label for="updWorkStart"/> -->
+<!-- 				<t:select t:id="updWorkStart" value="userCalendar.workStart" model="hours"/> -->
 <!-- 				<br/> -->
-				<input t:type="submit" t:value="Zapisz"/>
-            </form>
+<!-- 				<t:label for="updWorkEnd"/> -->
+<!-- 				<t:select t:id="updWorkEnd" value="userCalendar.workEnd" model="hours"/> -->
+<!-- 				<br/> -->
+<!-- 				<input t:type="submit" t:value="Zapisz"/> -->
+<!--             </t:form> -->
         </t:if>
         <t:if negate="true" test="userCalendar">
-            <form t:type="form" t:id="createForm" class="well">
+            <t:form type="form" t:id="createForm" class="well">
             	<t:label for="crtDescription"/>
 				<input t:type="TextField" t:id="crtDescription" value="userCalendar.description" t:validate="maxlength=100" size="10"/>
 				<br/>
@@ -41,7 +49,7 @@
 <!-- 				<input t:type="TextField" t:id="crtWorkEnd" value="userCalendar.workEnd" t:validate="maxlength=5" size="10"/> -->
 <!-- 				<br/> -->
 				<input t:type="submit" t:value="Zapisz"/>
-            </form>
+            </t:form>
         </t:if>
         <a t:type="pageLink" t:page="plan" href="#">Cancel</a>
     </div>
