--- a/src/main/resources/com/planner/components/Layout.tml
+++ b/src/main/resources/com/planner/components/Layout.tml
@@ -58,7 +58,7 @@
     <hr />
 
     <footer>
-        <p>&copy; Your Company 2016</p>
+        <p>&copy; Copyright by Simple And Clever 2016</p>
     </footer>
 
 </div> <!-- /container -->
