--- a/src/main/resources/com/planner/pages/Plan.tml
+++ b/src/main/resources/com/planner/pages/Plan.tml
@@ -18,10 +18,15 @@
 		<t:Form t:id="calendarForm">
 			<input class="btn btn-lg btn-primary btn-block" t:id="up" t:type="Submit" value="Poprzedni tydzień"/>
 				<br/>
-			<table t:type="grid" t:source="calendarsWeek" t:row="calendar" t:exclude="userId" t:reorder="workingDate,workStart,workEnd,description" t:add="action">
-				<p:actionCell>
-		            <a t:type="pageLink" t:page="calendarUpdate" t:context="[hotel.hotelId,employee.employeeId,calendar.calendarId]" href="#">Update</a>
-		        </p:actionCell>
+			<table t:type="grid" t:source="calendarsWeek" t:row="employeeCalendar" t:include="workDate" t:add="activities">
+				<p:activitiesCell>
+				<table t:type="grid" t:source="employeeCalendar.listUserCalendarDescr" t:row="userCalendarDescr" t:include="workStart,workEnd,description"
+				 t:add="action">
+					<p:actionCell>
+		            	<a t:type="pageLink" t:page="calendarUpdate" t:context="[hotel.hotelId,userCalendarDescr.employeeId,userCalendarDescr.calendarId,userCalendarDescr.userCalendarId]" href="#">Update</a>
+		        	</p:actionCell>
+				</table>
+				</p:activitiesCell>
 			</table>
 				<br/>
 			<input class="btn btn-lg btn-primary btn-block" t:id="down" t:type="Submit" value="Następny tydzień"/>
