--- a/src/main/resources/com/planner/components/Layout.tml
+++ b/src/main/resources/com/planner/components/Layout.tml
@@ -23,7 +23,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <t:pagelink page="index" class="navbar-brand">Home</t:pagelink>
+            <t:pagelink page="index" class="navbar-brand">Strona główna</t:pagelink>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -35,7 +35,7 @@
             </ul>
             <span class="navbar-right">
                 <li>
-                    <t:pagelink page="login" class="btn btn-default navbar-btn">Sign in</t:pagelink>
+                    <t:pagelink page="login" class="btn btn-default navbar-btn">Zaloguj</t:pagelink>
                	</li>
             </span>
 
