--- a/src/main/resources/com/planner/pages/Login.tml
+++ b/src/main/resources/com/planner/pages/Login.tml
@@ -3,14 +3,18 @@
       xmlns:p="tapestry:parameter">
 
 <div class="row">
-    <div class="span4 offset3">
-        <t:form t:id="login">
-            <h2>Please sign in</h2>
-            <t:textfield t:id="email" class="input-block-level" validate="required" placeholder="Email address"/>
-            <t:passwordfield t:id="password" class="input-block-level" validate="required" placeholder="Password"/>
-            <t:submit class="btn btn-large btn-primary" value="Sign in"/>
-        </t:form>
-    </div>
+	<p>You have successfully logged in!</p>
 </div>
+
+<!-- <div class="row"> -->
+<!--     <div class="span4 offset3"> -->
+<!--         <t:form t:id="login"> -->
+<!--             <h2>Please sign in</h2> -->
+<!--             <t:textfield t:id="email" class="input-block-level" validate="required" placeholder="Email address"/> -->
+<!--             <t:passwordfield t:id="password" class="input-block-level" validate="required" placeholder="Password"/> -->
+<!--             <t:submit class="btn btn-large btn-primary" value="Sign in"/> -->
+<!--         </t:form> -->
+<!--     </div> -->
+<!-- </div> -->
 
 </html>
