--- a/src/main/resources/com/planner/pages/Signin.tml
+++ b/src/main/resources/com/planner/pages/Signin.tml
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:t="http://tapestry.apache.org/schema/tapestry_5_3.xsd">
-<head>
-	<meta charset="utf-8"/>
-	<title>SignIn</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-	<meta name="description" content=""/>
-	<meta name="author" content=""/>
+<html t:type="layout" title="About planner"
+      xmlns:t="http://tapestry.apache.org/schema/tapestry_5_4.xsd"
+      xmlns:p="tapestry:parameter">
 
+<head>
 	<!-- Le styles -->
 	<style type="text/css">
 		body {
@@ -78,7 +74,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <t:pagelink page="index" class="navbar-brand">GoodJob!</t:pagelink>
+            <t:pagelink page="index" class="navbar-brand">Strona główna</t:pagelink>
         </div>
     </div>
 </div>
@@ -86,7 +82,6 @@
 <div class="container">
 
 	<h1>Log In</h1>
-
 
 	<t:form class="form-signin" role="form" autofocus="true">
 		<t:alerts/>
@@ -102,18 +97,6 @@
 		<button class="btn btn-lg btn-primary btn-block" type="submit">${message:login}</button>
 		<t:pagelink page="index" class="btn btn-lg btn-primary btn-block">${message:back}</t:pagelink>
 	</t:form>
-
-</div> <!-- /container -->
-
-<div class="container">
-
-    <t:body />
-
-    <hr />
-
-    <footer>
-        <p>&copy; GoodJob 2016</p>
-    </footer>
 
 </div> <!-- /container -->
 
