--- a/src/main/resources/com/planner/pages/Index.tml
+++ b/src/main/resources/com/planner/pages/Index.tml
@@ -17,5 +17,6 @@
 		</p:scheduleCell>
 	</table>
 	<a t:type="pagelink" t:page="createHotel" href="#"><button class="btn btn-lg btn-primary btn-block" type="submit">Dodaj nowy hotel</button></a>
+	<a t:type="pagelink" t:page="changePassword" href="#">Change password</a>
 
 </html>
