Dodane logowanie i obsluga konta uzytkownika

--- a/src/main/resources/com/planner/pages/ChangePassword.tml
+++ b/src/main/resources/com/planner/pages/ChangePassword.tml
@@ -7,15 +7,18 @@
 <div class="eg">
 			<t:form type="form" t:id="changePassword" class="well">
             	<t:label for="oldPassword"/>
-				<input t:type="PasswordField" t:id="oldPassword" value="oldPassword" t:validate="maxlength=100" size="10"/>
+				<input t:type="PasswordField" t:id="oldPassword" value="oldPassword" t:validate="required,maxlength=100" size="10"/>
 				<br/>
 				<t:label for="newPassword"/>
-				<input t:type="PasswordField" t:id="newPassword" value="newPassword" t:validate="maxlength=100" size="10"/>
+				<input t:type="PasswordField" t:id="newPassword" value="newPassword" t:validate="required,maxlength=100" size="10"/>
 				<br/>
 				<t:label for="newPassword1"/>
-				<input t:type="PasswordField" t:id="newPassword1" value="newPassword1" t:validate="maxlength=100" size="10"/>
+				<input t:type="PasswordField" t:id="newPassword1" value="newPassword1" t:validate="required,maxlength=100" size="10"/>
 				<br/>
-				<input t:type="submit" t:value="Zapisz"/>
+				<span>
+				<input t:type="submit" t:value="Zapisz"/>&nbsp;&nbsp;&nbsp;
+				<a t:type="pagelink" t:page="showUser" href="#"><input type="Button" value="Anuluj" class="btn btn-default"/></a>
+				</span>
             </t:form>
     </div>
       
