--- a/src/main/resources/com/planner/pages/Signin.tml
+++ b/src/main/resources/com/planner/pages/Signin.tml
@@ -81,13 +81,11 @@
 
 <div class="container">
 
-	<h1>Log In</h1>
-
 	<t:form class="form-signin" role="form" autofocus="true">
 		<t:alerts/>
 		<t:errors/>
 
-		<h2 class="form-signin-heading">Please sign in</h2>
+		<h2 class="form-signin-heading">Zaloguj się</h2>
 		<t:textfield t:id="username" validate="required" tabindex="1" placeholder="${message:username}" required="true" autofocus="true"/>
 		<t:passwordfield t:id="password" validate="required" tabindex="2" placeholder="${message:password}" required="true"/>
 		<label class="checkbox">
