--- a/src/main/resources/com/planner/pages/Index.tml
+++ b/src/main/resources/com/planner/pages/Index.tml
@@ -1,8 +1,70 @@
 <html t:type="layout" title="planner Index"
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_4.xsd"
       xmlns:p="tapestry:parameter"  >
+      
+      <head>
+	<!-- Le styles -->
+	<style type="text/css">
+		body {
+			padding-top: 60px;
+			padding-bottom: 40px;
+		}
 
-	<table t:type="grid" t:source="hotels" t:row="hotel" t:add="positions,employees,schedule">
+		div.palette {
+			display:block !important;
+		}
+
+		.form-signin {
+			max-width: 330px;
+			padding: 15px;
+			margin: 0 auto;
+		}
+		.form-signin .form-signin-heading,
+		.form-signin .checkbox {
+			margin-bottom: 10px;
+		}
+		.form-signin .checkbox {
+			font-weight: normal;
+		}
+		.form-signin .form-control {
+			position: relative;
+			height: auto;
+			-webkit-box-sizing: border-box;
+			-moz-box-sizing: border-box;
+			box-sizing: border-box;
+			padding: 10px;
+			font-size: 16px;
+		}
+		.form-signin .form-control:focus {
+			z-index: 2;
+		}
+		.form-signin input[type="text"] {
+			margin-bottom: -1px;
+			border-bottom-right-radius: 0;
+			border-bottom-left-radius: 0;
+		}
+		.form-signin input[type="password"] {
+			margin-bottom: 10px;
+			border-top-left-radius: 0;
+			border-top-right-radius: 0;
+		}
+	</style>
+
+	<!-- HTML5 Shim and Respond.js IE6-8 support of HTML5 elements and media queries -->
+	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+	<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+		<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+	<![endif]-->
+
+	<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet"/>
+
+	<!-- Fav and touch icons -->
+	<link rel="shortcut icon" href="${asset:context:/favicon.ico}"/>
+</head>
+
+	<t:security.User>
+	<table t:type="grid" t:source="hotels" t:row="hotel" t:add="positions,employees,schedule,delete">
 		<p:positionsCell>
 			<a t:type="pagelink" t:page="positions" t:context="hotel.hotelId" href="#">
 			<img src="${asset:context:assets/update.png}" alt="Update"/></a>
@@ -15,7 +77,33 @@
 			<a t:type="pagelink" t:page="hotelSchedule" t:context="hotel.hotelId" href="#">
 			<img src="${asset:context:assets/update.png}" alt="Update"/></a>
 		</p:scheduleCell>
+		<p:deleteCell>
+			<a t:type="eventLink" t:event="Delete" t:context="hotel.hotelId" 
+                    t:mixins="Confirm">
+				<img src="${asset:context:assets/delete.png}" alt="Delete"/></a>
+		</p:deleteCell>
 	</table>
-	<a t:type="pagelink" t:page="createHotel" href="#"><button class="btn btn-lg btn-primary btn-block" type="submit">Dodaj nowy hotel</button></a>
+	<a t:type="pagelink" t:page="createHotel" href="#"><button class="btn btn-lg btn-primary btn-block" type="submit">Dodaj nowy hotel</button></a>	
+	</t:security.User>
+	
+	<t:security.Guest>
+		<div class="container">
+
+	<t:form class="form-signin" role="form" autofocus="true">
+		<t:alerts/>
+		<t:errors/>
+
+		<h2 class="form-signin-heading">Zaloguj się</h2>
+		<t:textfield t:id="username" validate="required" tabindex="1" placeholder="${message:username}" required="true" autofocus="true"/>
+		<t:passwordfield t:id="password" validate="required" tabindex="2" placeholder="${message:password}" required="true"/>
+		<label class="checkbox">
+			<t:checkbox t:id="rememberMe" tabindex="3" />${message:remember.me}
+		</label>
+		<button class="btn btn-lg btn-primary btn-block" type="submit">${message:login}</button>
+		<t:pagelink page="index" class="btn btn-lg btn-primary btn-block">${message:back}</t:pagelink>
+	</t:form>
+
+	</div> <!-- /container -->
+	</t:security.Guest>
 
 </html>
