--- a/src/main/resources/com/planner/pages/AddEmpToCal.tml
+++ b/src/main/resources/com/planner/pages/AddEmpToCal.tml
@@ -26,7 +26,7 @@
             <br/>
         </t:if>
 
-        <a t:type="pageLink" t:page="hotelSchedule" href="#">Cancel</a>
+        <a t:type="pageLink" t:page="hotelSchedule" href="#">${message:cancel}</a>
     </div>
 
 </html>
