--- a/src/main/resources/com/planner/pages/Positions.tml
+++ b/src/main/resources/com/planner/pages/Positions.tml
@@ -2,56 +2,56 @@
       xmlns:t="http://tapestry.apache.org/schema/tapestry_5_4.xsd"
       xmlns:p="tapestry:parameter">
 
-	<h4>Pokojowa:</h4>
-	<table t:type="grid" t:source="pokojowa" t:row="employee" t:include="firstName,lastName,description" t:add="update,delete">
-		<p:updateCell>
-			<a t:type="pagelink" t:page="updateEmployee" t:context="employee.employeeId" href="#">
-				<img src="${asset:context:assets/update.png}" alt="Update"/></a>
-		</p:updateCell>
-		<p:deleteCell>
-			<a t:type="eventLink" t:event="Delete" t:context="employee.employeeId" 
-                    t:mixins="Confirm" t:message="Delete ${employee.firstName} ${employee.lastName}?">
-				<img src="${asset:context:assets/delete.png}" alt="Delete"/></a>
-		</p:deleteCell>
-		<p:empty>
-              <p>${message:empty}</p>
-        </p:empty>
-	</table>
+<!-- 	<h4>Pokojowa:</h4> -->
+<!-- 	<table t:type="grid" t:source="pokojowa" t:row="employee" t:include="firstName,lastName,description" t:add="update,delete"> -->
+<!-- 		<p:updateCell> -->
+<!-- 			<a t:type="pagelink" t:page="updateEmployee" t:context="employee.employeeId" href="#"> -->
+<!-- 				<img src="${asset:context:assets/update.png}" alt="Update"/></a> -->
+<!-- 		</p:updateCell> -->
+<!-- 		<p:deleteCell> -->
+<!-- 			<a t:type="eventLink" t:event="Delete" t:context="employee.employeeId"  -->
+<!--                     t:mixins="Confirm" t:message="Delete ${employee.firstName} ${employee.lastName}?"> -->
+<!-- 				<img src="${asset:context:assets/delete.png}" alt="Delete"/></a> -->
+<!-- 		</p:deleteCell> -->
+<!-- 		<p:empty> -->
+<!--               <p>${message:empty}</p> -->
+<!--         </p:empty> -->
+<!-- 	</table> -->
 	
-	<h4>Lobby:</h4>
-	<table t:type="grid" t:source="lobby" t:row="employee" t:include="firstName,lastName,description" t:add="update,delete">
-		<p:updateCell>
-			<a t:type="pagelink" t:page="updateEmployee" t:context="employee.employeeId" href="#">
-				<img src="${asset:context:assets/update.png}" alt="Update"/></a>
-		</p:updateCell>
-		<p:deleteCell>
-			<a t:type="eventLink" t:event="Delete" t:context="employee.employeeId" 
-                    t:mixins="Confirm" t:message="Delete ${employee.firstName} ${employee.lastName}?">
-				<img src="${asset:context:assets/delete.png}" alt="Delete"/></a>
-		</p:deleteCell>
-		<p:empty>
-              <p>${message:empty}</p>
-        </p:empty>
-	</table>
+<!-- 	<h4>Lobby:</h4> -->
+<!-- 	<table t:type="grid" t:source="lobby" t:row="employee" t:include="firstName,lastName,description" t:add="update,delete"> -->
+<!-- 		<p:updateCell> -->
+<!-- 			<a t:type="pagelink" t:page="updateEmployee" t:context="employee.employeeId" href="#"> -->
+<!-- 				<img src="${asset:context:assets/update.png}" alt="Update"/></a> -->
+<!-- 		</p:updateCell> -->
+<!-- 		<p:deleteCell> -->
+<!-- 			<a t:type="eventLink" t:event="Delete" t:context="employee.employeeId"  -->
+<!--                     t:mixins="Confirm" t:message="Delete ${employee.firstName} ${employee.lastName}?"> -->
+<!-- 				<img src="${asset:context:assets/delete.png}" alt="Delete"/></a> -->
+<!-- 		</p:deleteCell> -->
+<!-- 		<p:empty> -->
+<!--               <p>${message:empty}</p> -->
+<!--         </p:empty> -->
+<!-- 	</table> -->
 	
-	<h4>Spa:</h4>
-	<table t:type="grid" t:source="spa" t:row="employee" t:include="firstName,lastName,description" t:add="update,delete">
-		<p:updateCell>
-			<a t:type="pagelink" t:page="updateEmployee" t:context="employee.employeeId" href="#">
-				<img src="${asset:context:assets/update.png}" alt="Update"/></a>
-		</p:updateCell>
-		<p:deleteCell>
-			<a t:type="eventLink" t:event="Delete" t:context="employee.employeeId" 
-                    t:mixins="Confirm" t:message="Delete ${employee.firstName} ${employee.lastName}?">
-				<img src="${asset:context:assets/delete.png}" alt="Delete"/></a>
-		</p:deleteCell>
-		<p:empty>
-              <p>${message:empty}</p>
-        </p:empty>
-	</table>
+<!-- 	<h4>Spa:</h4> -->
+<!-- 	<table t:type="grid" t:source="spa" t:row="employee" t:include="firstName,lastName,description" t:add="update,delete"> -->
+<!-- 		<p:updateCell> -->
+<!-- 			<a t:type="pagelink" t:page="updateEmployee" t:context="employee.employeeId" href="#"> -->
+<!-- 				<img src="${asset:context:assets/update.png}" alt="Update"/></a> -->
+<!-- 		</p:updateCell> -->
+<!-- 		<p:deleteCell> -->
+<!-- 			<a t:type="eventLink" t:event="Delete" t:context="employee.employeeId"  -->
+<!--                     t:mixins="Confirm" t:message="Delete ${employee.firstName} ${employee.lastName}?"> -->
+<!-- 				<img src="${asset:context:assets/delete.png}" alt="Delete"/></a> -->
+<!-- 		</p:deleteCell> -->
+<!-- 		<p:empty> -->
+<!--               <p>${message:empty}</p> -->
+<!--         </p:empty> -->
+<!-- 	</table> -->
 	
 	<br/>
-	<a t:type="pagelink" t:page="createEmployee" t:context="hotel.hotelId" href="#"><button class="btn btn-lg btn-primary btn-block" type="submit">Dodaj nowego pracownika</button></a>
+	<a t:type="pagelink" t:page="createPosition" t:context="hotel.hotelId" href="#"><button class="btn btn-lg btn-primary btn-block" type="submit">Dodaj nowe stanowisko</button></a>
 	<br/>
 	
 	<t:Form>
@@ -59,5 +59,27 @@
     	<br/>
     	<input class="btn btn-lg btn-primary btn-block" t:id="submit" t:type="Submit" value="Wybierz"/>
 	</t:Form>
+	<br/>
+	
+	<t:If t:test="submitted">
+		<table t:type="grid" t:source="employeePositionsList" t:row="employeePositions" t:include="firstName,lastName,description,positionDescr" t:add="update,delete">
+			<p:updateCell>
+			<a t:type="pagelink" t:page="updateEmployee" t:context="employeePositions.employeeId" href="#">
+				<img src="${asset:context:assets/update.png}" alt="Update"/></a>
+			</p:updateCell>
+			<p:deleteCell>
+				<a t:type="eventLink" t:event="Delete" t:context="employeePositions.employeeId" 
+	                    t:mixins="Confirm" t:message="Delete ${employeePositions.firstName} ${employeePositions.lastName}?">
+					<img src="${asset:context:assets/delete.png}" alt="Delete"/></a>
+			</p:deleteCell>
+			<p:empty>
+	              <p>${message:empty}</p>
+	        </p:empty>
+		</table>
+	</t:If>
+	
+	<br/>
+	<a t:type="pagelink" t:page="createEmployee" t:context="hotel.hotelId" href="#"><button class="btn btn-lg btn-primary btn-block" type="submit">Dodaj nowego pracownika</button></a>
+	<br/>
 	
 </html>
